# wamr-template

./: .clang-format  .gitignore  CMakeLists.txt  README.md  package-lock.json  package.json
api/: test.yml  types.yml  utils.yml
cart/: CMakeLists.txt
cart/assemblyscript/: cart.ts
cart/assemblyscript/runtests/: main.ts
cart/c/runtests/: main.c  typetests.h
cart/src/: cart.h  main.c  null0.h  typetests.h
docs/: emscripten_fs.js  host.mjs  index.html  main.wasm  null0.mjs  wasm.js
docs/cart/: main.wasm
docs/carts/: as_runtests.null0  runtests.null0
host/: CMakeLists.txt
host/src/: fs.h  hexdump.h  host.h  host_api.h  host_callbacks_emscripten.h  host_callbacks_wamr.h  host_emscripten.c  host_emscripten.h  host_emscripten_footer.h  host_emscripten_header.h  host_mem_emscripten.h  host_mem_wamr.h  host_wamr.c  host_wamr.h  host_wamr_footer.h  host_wamr_header.h  main.c
tools/: buildcart.sh  gen_host.js
tools/cmake/: Findwamr.cmake
